# Python-SDK

./: .gitignore  404.html  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  README.md  SECURITY.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  script_cript.py  setup.cfg  trunk
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  simple-issue.md
.github/workflows/: build_and_deploy_docs.yaml  codeql.yml  dependency-review.yml  docs.yaml  docs_build_and_deploy.yaml  docs_check.yaml  doctest.yaml  install.yml  mypy.yaml  mypy_check.yaml  test_coverage.yaml  test_coverage_with_tokens.yml  test_examples.yml  tests.yml  trunk.yml
.trunk/: .gitignore  trunk.yaml
.trunk/configs/: .cspell.json  .markdownlint.yaml
api/api/: index.html
api/controlled_vocabulary_categories/: index.html
api/paginator/: index.html
api/search_modes/: index.html
docs/: crash_course.md  exceptions.md  extra.css  faq.md  index.md  utility_functions.md
docs/api/: api.md  controlled_vocabulary_categories.md  paginator.md  search_modes.md
docs/examples/: .gitignore  simulation.md  synthesis.md
docs/exceptions/: api_exceptions.md  node_exceptions.md
docs/nodes/: uuid_base.md
docs/tutorial/: cript_installation_guide.md  how_to_get_api_token.md
examples/: synthesis.md
examples/simulation/: index.html
examples/synthesis/: index.html
exceptions/api_exceptions/: index.html
exceptions/node_exceptions/: index.html
faq/: index.html
nodes/uuid_base/: index.html
search/: search_index.json
src/: api.py  exceptions.py  pyproject.toml
src/api/: api.py  (+1 more)
tests/: api.py  conftest.py  development_config.json  integration_test_helper.py  production_config.json  staging_config.json  test_integration.py  test_node_util.py  test_nodes_no_host.py  test_type_hint.py  util.py
utility_functions/: index.html
(+204 files in other folders)
