[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 250
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.ipynb
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | miniconda
)/
'''

[tool.ruff]
line-length = 250
