[metadata]
name = CRIPT Python-SDK
version = 2.0.0
description = CRIPT Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
author = CRIPT Development Team
url = https://github.com/C-Accel-CRIPT/Python-SDK
license = UNLICENSED
license_files = UNLICENSED
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    beartype>=0.10.4
    requests>=2.27.1

[options.packages.find]
where=src